// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for default skeleton 1`] = `
<div
  class="bg-accent animate-pulse rounded-md"
  data-slot="skeleton"
/>
`;

exports[`Skeleton Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for multiple skeletons 1`] = `
<div>
  <div
    class="bg-accent animate-pulse rounded-md w-16 h-4"
    data-slot="skeleton"
  />
  <div
    class="bg-accent animate-pulse rounded-md w-32 h-6"
    data-slot="skeleton"
  />
  <div
    class="bg-accent animate-pulse rounded-md w-64 h-8"
    data-slot="skeleton"
  />
</div>
`;

exports[`Skeleton Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for skeleton with content 1`] = `
<div
  class="bg-accent animate-pulse rounded-md"
  data-slot="skeleton"
>
  Loading content
</div>
`;

exports[`Skeleton Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for skeleton with custom styling 1`] = `
<div
  class="animate-pulse rounded-md w-32 h-8 bg-gray-200"
  data-slot="skeleton"
/>
`;
